--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==6.6
 elasticsearch==2.3.0
 elasticsearch-dsl==2.1.0
 Flask==0.11.1
+Flask-Cors==2.1.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
