--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 -i https://pypi.org/simple
-click==6.7
-flask-cors==3.0.6
-flask==1.0.2
-itsdangerous==0.24
-jinja2==2.10
-markupsafe==1.0
-psycopg2==2.7.5
-python-dateutil==2.7.3
-six==1.11.0
-werkzeug==0.14.1
+click==7.0
+flask-cors==3.0.8
+flask==1.1.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+jinja2==2.10.3
+markupsafe==1.1.1
+psycopg2==2.8.4
+python-dateutil==2.8.0
+six==1.12.0
+werkzeug==0.16.0
